<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Twitter</string>
    <string name="action_settings">Settings</string>
    <string name="action_bar">placeholder</string>
    <string name="login_label">Log in</string>
    <string name="title_activity_timeline">Timeline</string>
    <string name="title_activity_compose">Compose</string>
    <string name="cancel_button">Cancel</string>
    <string name="tweet_button">Tweet</string>
    <string name="tweet_input_text">Tweet it!</string>
    <string name="title_activity_profile">Profile</string>
    <string name="profile_name">Name</string>
    <string name="profile_tagline">Tagline</string>
    <string name="profile_fls">5 Followers</string>
    <string name="profile_fling">10 Following</string>
    
</resources>